appId: com.final_project_winter_2025_eu_nagisa_riegler
---
# reload app
- stopApp
- launchApp:
    clearState: true

  # --- Login page to register page ---
- assertVisible: PixVault
- tapOn:
    id: register-button

- tapOn:
    id: input-username
- inputText:
    text: TestUser
- hideKeyboard

- tapOn:
    id: input-birthday
- inputText:
    text: 1990-01-01
- hideKeyboard

- tapOn:
    id: input-country
- inputText:
    text: Norway
- hideKeyboard

- tapOn:
    id: input-description
- inputText:
    text: This is a test user.
- hideKeyboard

- tapOn:
    id: input-email
- inputText:
    text: testuser@example.com
- hideKeyboard

- tapOn:
    id: input-password
- inputText:
    text: Password123
- hideKeyboard

- tapOn:
    id: input-confirm-password
- inputText:
    text: Password123
- hideKeyboard

- tapOn:
    id: register
- assertVisible:
    id: 'avatar'

- tapOn: 'logout'
- tapOn:
    id: 'input-email'
- inputText:
    text: 'testuser@example.com'
- 'hideKeyboard'
- tapOn:
    id: 'input-password'
- inputText:
    text: 'Password123'
- 'hideKeyboard'
- tapOn:
    id: 'login-button'
- assertVisible:
    id: 'user-page'
- tapOn:
    id: 'follower-text'
- assertVisible: 'Follower'
- tapOn:
    id: 'close-button'
- tapOn:
    id: 'followed'
- assertVisible: 'Followed'
- tapOn:
    id: 'close-button'
- tapOn:
    id: 'edit'
- assertVisible: 'Edit Account'
- tapOn:
    id: 'edit-name'
- 'eraseText'
- inputText:
    text: 'EditUser'
- 'hideKeyboard'
- tapOn:
    id: 'edit-country'
- 'eraseText'
- inputText:
    text: 'Japan'
- 'hideKeyboard'
- tapOn:
    id: 'edit-description'
- 'eraseText'
- inputText:
    text: 'This is edited user.'
- 'hideKeyboard'
- tapOn: 'EDIT'
- assertVisible: 'EditUser'
- assertVisible: 'This is edited user.'
- assertVisible: 'Japan'
- tapOn:
    id: 'write-album'
- assertVisible: 'Create Album'
- tapOn:
    id: 'input-album-title'
- inputText:
    text: 'Album title'
- hideKeyboard
- tapOn:
    id: 'input-description'
- inputText:
    text: 'Album description'
- hideKeyboard
- tapOn:
    id: 'input-location'
- inputText:
    text: 'Album location'
- hideKeyboard
- tapOn: 'Ok'
- assertVisible: 'Album title'
- assertVisible: 'Album description'
- tapOn: 'Album location'
- tapOn:
    id: 'icon-button'
    index: 1
- assertVisible: 'Edit Album'
- tapOn:
    id: 'edit-album-title'
- 'eraseText'
- inputText:
    text: 'Edit title'
- hideKeyboard
- tapOn:
    id: 'edit-album-description'
- 'eraseText'
- inputText:
    text: 'Edit description'
- hideKeyboard
- tapOn:
    id: 'edit-album-location'
- 'eraseText'
- inputText:
    text: 'Edit location'
- hideKeyboard

- tapOn: 'EDIT'
- assertVisible: 'Edit title'
- assertVisible: 'Edit description'
- assertVisible: 'Edit location'
- tapOn:
    id: 'icon-button'
    index: 2
- tapOn:
    id: 'select-photo'
- inputText:
    text: Photo title
- hideKeyboard

- tapOn: Description
- inputText:
    text: Photo description
- hideKeyboard

- tapOn: Location
- inputText:
    text: Photo location
- hideKeyboard

- tapOn: Ok
- assertVisible:
    id: photo-16
- tapOn:
    id: photo-16
- assertVisible:
    id: photo-image
- tapOn:
    id: button
- assertVisible: Album
- tapOn:
    id: icon-button
    index: 0
